# glow

./: CMakeLists.txt
cmake/modules/: GlowDefaults.cmake
lib/Backends/Sophon/: Bundle.cpp  CMakeLists.txt  GlowLIRVisitor.cpp  SophonBackend.h  SophonFunction.h  SophonTargetTransformInfo.h
lib/Backends/Sophon/BM188x/: BM1880Backend.cpp  BM1880CodeGenBMK.cpp
lib/Backends/Sophon/Support/: Format.h
lib/Graph/: CMakeLists.txt  Graph.cpp  Nodes.cpp
lib/IR/: Instrs.cpp
lib/Optimizer/: GraphOptimizer.cpp
lib/Quantization/Base/: Base.cpp
tests/unittests/: CMakeLists.txt
tests/unittests/Sophon/: CMakeLists.txt
tests/unittests/Sophon/Backends/: BM1880CodeGenTest.cpp  BM1880DeleteQuantizeNodeTest.cpp  BM1880Expand.cpp  BM1880ExpandCodeGenTest.cpp  BM1880GetLMemSizeTest.cpp  BM1880HIRSliceTest.cpp  BM1880MemoryAllocTest.cpp  CMakeLists.txt  LoadStoreTest.cpp
tests/unittests/Sophon/Importer/: CMakeLists.txt  caffeImporterTest.cpp
tools/ClassGen/: CMakeLists.txt  InstrGen.cpp  NodeGen.cpp
tools/ClassGen/Backends/Sophon/: CMakeLists.txt  SophonSpecificInstrs.h  SophonSpecificInstrsIF.h.in  SophonSpecificInstrsVerification.h  SophonSpecificNodes.h  SophonSpecificNodesIF.h.in  SophonSpecificNodesVerification.h
utils/docker/: build.sh
